# rust-projectlist-tool

./: .gitignore  Cargo.toml  Docker.Jenkinsfile  Dockerfile  Jenkinsfile  README.md  entrypoint.sh
entities/src/: project.rs  projectlist.rs
form_entities/: Cargo.toml
form_entities/src/: entities.rs
httproutes/: Cargo.toml
httproutes/src/: appdata.rs  config.rs  lib.rs  routes.rs
migration/src/: lib.rs  m20230228_000001_initial_db.rs
pdf/: Cargo.toml
pdf/src/: generate_projectlist.rs  lib.rs
server/: Cargo.toml
server/src/: database.rs  http.rs  lib.rs
server/static/css/: page.css
server/static/images/: .gitignore  readme.txt
server/static/scripts/: page.js
server/templates/tera/: base.html.tera  css.html.tera  index.html.tera  navigation.html.tera  scripts.html.tera
server/templates/tera/businessarea/: listbusinessarea.html.tera
server/templates/tera/client/: listclient.html.tera
server/templates/tera/person/: listperson.html.tera
server/templates/tera/project/: listproject.html.tera
server/templates/tera/role/: listrole.html.tera
server/templates/tera/technology/: listtechnology.html.tera
services/src/: businessareaservice.rs  clientservice.rs  lib.rs  personservice.rs  projectservice.rs  roleservice.rs  technologyservice.rs
src/: main.rs
