[package]
name = "httproutes"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "httproutes"
path = "src/lib.rs"

[dependencies]
log ="0.4.17"
http = "0.2.9"
config = "0.13.1"
sea-orm = { version = "0.11.0", features = ["sqlx-sqlite", "runtime-actix-native-tls", "macros"]}
serde = { version = "1", features = ["derive"] }
actix-web = "4"
actix-files = "0.6.2"
tera = "1.17.1"
pdf ={ path = "../pdf"}
reqwest = { version = "0.11.14", features = ["json"] }
services ={ path = "../services"}
entities ={ path = "../entities"}
form_entities = {path = "../form_entities"}

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
