[package]
name = "pdf"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "pdf"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15.6"
config = "0.13.1"
log = "0.4.0"
entities = { path = "../entities"}
regex = "1.7.1"
lazy_static = "1.4.0"
genpdf ={ version = "0.2.0", features = ["images"]}
tokio = { version = "^1.26.0"} 

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]